# virus-scanner-app

./: LICENSE  README.md  build-all.ps1  build-all.sh  index.html  jest.config.js  package-lock.json  package.json  playwright.config.js  svelte.config.js  test.html  vite.config.js  vite.config.ts
.github/workflows/: ci.yml
e2e-tests/: app.spec.js
src/: App.svelte  app.html  custom.html  hooks.server.js
src-tauri/: Cargo.toml  Info.plist  capabilities.json  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/src/: background_scanner.rs  config.rs  file_monitor.rs  lib.rs  macros.rs  main.rs  monitor_config.rs  scanner.rs  scanner_config.rs  settings.rs  system_integration.rs  tray.rs  virus_total.rs
src-tauri/tests/: virus_total_tests.rs
src/__tests__/: ScanResults.test.js
src/lib/: tauri.js  types.ts
src/lib/components/: FileDetectionHandler.svelte  FileInfo.svelte  History.svelte  Layout.svelte  Notifications.svelte  Quarantine.svelte  ScanProgress.svelte  ScanResults.svelte  Scanner.svelte  ScannerApp.svelte  Settings.svelte  SetupWizard.svelte  Welcome.svelte  WelcomeWizard.svelte
src/routes/: +error.svelte  +layout.js  +layout.svelte  +page.js  +page.svelte
static/: app.css
