[package]
name = "virus-scanner-app"
version = "0.1.0"
description = "A VirusTotal file scanner application"
authors = ["you"]
edition = "2021"

[lib]
name = "virus_scanner_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-notification = "2.0.0"
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "5.1"
reqwest = { version = "0.11", features = ["json", "multipart", "native-tls"] }
sha2 = "0.10"
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
dirs = "4.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
once_cell = "1.19"
futures = "0.3"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.4", features = ["v4", "serde"] }
auto-launch = "0.5"
zip = "0.6"
tempfile = "3.8"
async-trait = "0.1"
strum = { version = "0.25", features = ["derive"] }
num_cpus = "1.16"
winapi = { version = "0.3", features = ["winuser"], optional = true }
cocoa = { version = "0.25", optional = true }
objc = { version = "0.2", optional = true }
libnotify = { version = "1.0", optional = true }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
windows = ["winapi"]
macos = ["cocoa", "objc"]
linux = ["libnotify"]

